fix appearance on mobile

--- a/docs/css/title.css
+++ b/docs/css/title.css
@@ -28,7 +28,7 @@ d-title {
 
 d-title h1 {
   grid-column: text;
-  font-size: 40px;
+  font-size: 25px;
   font-weight: 700;
   line-height: 1.1em;
   margin: 0 0 0.5rem;
